# HotpotQA-graphRAG

./: .gitignore  GraphRAG-pipeline.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  questions_set_easy.json
docs/: architecture.dot  recruiter_checklist.md
notebooks/: end_to_end_kg_qa_demo.ipynb
results/: README.md  batch_results_sample.csv
scripts/: run_batch.py  run_query.py
src/kg_query_pipeline/: __init__.py  config.py  graph.py  matching.py  pipeline.py  query_parser.py  sparql.py
