[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-query-pipeline"
version = "0.1.0"
description = "Natural-language question answering over an RDF knowledge graph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "rdflib>=7.0.0",
  "networkx>=3.0",
  "sentence-transformers>=2.5.0",
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
